gccida/c3/print_mem_expr
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_mem_expr/src/print-rtl.c:550:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *elements; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_mem_expr/src/print-rtl.c:581:19: error: use of undeclared identifier 'off_690140'
fprintf( outfile, off_690140, name->int_cst.int_cst.low); 
                  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_mem_expr/src/print-rtl.c:592:22: error: use of undeclared identifier 'unk_71B966'
v8 = ( const char *)&unk_71B966; 
                     ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_mem_expr/src/obj/print-rtl.o] Error 1
